# application-aggregation

./: .gitignore  Cargo.toml  README.md  bundle-manifest.json
crates/xiaohai-agent/: Cargo.toml
crates/xiaohai-agent/src/: main.rs
crates/xiaohai-assistant/: Cargo.toml
crates/xiaohai-assistant/src/: main.rs
crates/xiaohai-bootstrapper/: Cargo.toml
crates/xiaohai-bootstrapper/src/: main.rs
crates/xiaohai-bootstrapper/tests/: e2e_detect.rs  e2e_install_uninstall_filecopy.rs
crates/xiaohai-core/: Cargo.toml
crates/xiaohai-core/src/: auth.rs  ipc.rs  lib.rs  manifest.rs  paths.rs  state.rs
crates/xiaohai-core/tests/: bundle_manifest_parse.rs
crates/xiaohai-windows/: Cargo.toml
crates/xiaohai-windows/src/: dpapi.rs  elevation.rs  firewall.rs  lib.rs  prereq.rs  process.rs  registry.rs  service.rs  shortcut.rs
crates/xiaohai-windows/tests/: registry_rule.rs
docs/: commenting-guidelines.md  doc-coverage-report.md  常见问题.md  故障排查.md  注释规范.md  部署说明.md
scripts/: doc-coverage.ps1  smoke-test.ps1
