[package]
name = "xiaohai-assistant"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rand.workspace = true

xiaohai-core = { path = "../xiaohai-core" }
xiaohai-windows = { path = "../xiaohai-windows" }

eframe = "0.27"
interprocess = "2"
time = { version = "0.3", features = ["macros"] }
