[package]
name = "xiaohai-bootstrapper"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

xiaohai-core = { path = "../xiaohai-core" }
xiaohai-windows = { path = "../xiaohai-windows" }
