[package]
name = "xiaohai-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

time = { version = "0.3", features = ["serde", "macros"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
