[package]
name = "xiaohai-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
xiaohai-core = { path = "../xiaohai-core" }

winreg = "0.52"
sysinfo = "0.30"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Cryptography",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
windows-service = "0.7"
